update chapter2 to include writing own functions

--- a/chapter-1.ipynb
+++ b/chapter-1.ipynb
@@ -234,6 +234,10 @@
     "\n",
     "Functions have three basic parts. The first part is the name of the function (e.g., ```print```). The second part is the input to the function, which goes inside a pair of parentheses. We call these inputs **arguments**. Arguments are whatever objects or values you want to do operations with. Lastly, the **output** of a function is whatever result comes out of the operation.\n",
     "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Note</b>: In R, you can work with natural language by putting words or sentences between a pair of quotation marks \"\". Everything between the marks is called a string. We'll talk more about different data types in Chapter 3.\n",
+    "</div>\n",
+    "\n",
     "Sometimes a function takes only one argument (e.g., ```print(\"my message\")```. Sometimes, a function can take two or more, which are separated by commas (e.g., ```sum(1,2,3)```). Each function is unique in what it does, and in what arguments it requires to do its operation. As we move through the course, you will learn some important functions, as well as how to look up other less common ones.  \n",
     "\n",
     "Here we’ve put some instructions (as comments) into the code window. Write your code as a new line under each comment. See if your code works by clicking 'Run'. "
@@ -325,19 +329,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ad39103b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in read_csv(\"mindsetmatters.csv\"): could not find function \"read_csv\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in read_csv(\"mindsetmatters.csv\"): could not find function \"read_csv\"\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "read_csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/mindsetmatters.csv\")"
    ]
