update code running instructions in ch1

--- a/chapter-1.ipynb
+++ b/chapter-1.ipynb
@@ -38,7 +38,7 @@
     "Let's get started with learning some R right now! For example, here’s a bit of R code. Read the code in the window below. Before you \"run\" it (make it do something), what do you think it will do?\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Note</b>: First press the \"Live Code\" button at the top of this page (hover over the Rocketship icon) to load all the code windows in the chapter. Then, the first time you press \"Run\" within a code window it could take up to 1-2 minutes to connect to the server, so please be patient. \n",
+    "<b>Note</b>: To run code in a Google Colab notebook like this, hover over a code cell, and press the play button that appears on the left. \n",
     "</div>\n",
     "\n",
     "Press the \"Run\" button and see what happens:"
