update ch2 typo

--- a/chapter-2.ipynb
+++ b/chapter-2.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "### Sampling from a population\n",
     "\n",
-    "The concept of aggregation implies that we can make useful insights by collapsing across data – but how much data do we need? The idea of sampling says that we can summarize an entire population based on just a small number of samples from the population, as long as those samples are obtained in the right way. For example, the PURE study enrolled a sample of about 135,000 people, but its goal was to provide insights about the billions of humans who make up the population from which those people were sampled. As we already discussed above, the way that the study sample is obtained is critical, as it determines how broadly we can generalize the results. Another fundamental insight about sampling is that while larger samples are always better (in terms of their ability to accurately represent the entire population), there are diminishing returns as the sample gets larger. "
+    "The concept of aggregation implies that we can make useful insights by collapsing across data – but how much data do we need? The idea of sampling says that we can summarize an entire population based on just a small number of samples from the population, as long as those samples are obtained in the right way. For example, the PURE study enrolled a sample of about 135,000 people, but its goal was to provide insights about the billions of humans who make up the population from which those people were sampled. As we already discussed above, the way that the study sample is obtained is critical, as it determines how broadly we can generalize the results. Another fundamental insight about sampling is that while larger samples are always better (in terms of their ability to accurately represent the entire population), there are diminishing returns as the sample gets larger. \n"
    ]
   },
   {
@@ -145,9 +145,9 @@
     "<b>Note</b>: Remember that, in order to run code in this page, you first need to hover over the rocketship at the top, click \"Live Code\", and then wait a few minutes for the server to load the first time you \"Run\" a code block.\n",
     "</div>\n",
     "\n",
-    "The most basic control flow statement in R is the ```if``` statement. An ```if``` statement checks whether some logical expression is true or false and executes a specified block of code if the logical expression is true.\n",
+    "The most basic control flow statement in R is the \"if\" statement. An if statement checks whether some logical expression is true or false and executes a specified block of code if the logical expression is true.\n",
     "\n",
-    "In R, an if statement starts with if, followed by a logical expression in parentheses, followed by the code to execute when the if statement is true in curly braces. Before running the below code, read the comments and see if you can predict what will be returned by the code. "
+    "In R, an if statement starts with ```if```, followed by a logical expression in parentheses, followed by the code to execute when the if statement is true in curly braces. Before running the below code, read the comments and see if you can predict what will be returned by the code. "
    ]
   },
   {
@@ -173,7 +173,7 @@
    "source": [
     "In this case the logical expression was true - x was greater than y - so the print(x) statement was executed.\n",
     "\n",
-    "```If``` statements are often accompanied by ```else``` statements. ```Else``` statements come after ```if``` statements and allow you to execute code in the event that the logical expression of an ```if``` statement is false."
+    "If statements are often accompanied by \"else\" statements. Else statements come after if statements and allow you to execute code in the event that the logical expression of an if statement is false."
    ]
   },
   {
@@ -183,6 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x <- 10\n",
     "y <- 25         # Reassign variable y to make it larger than x\n",
     "\n",
     "if (x > y) {    # The original if statement\n",
@@ -225,9 +226,9 @@
    "id": "52d004ab",
    "metadata": {},
    "source": [
-    "```if``` statements require a logical statement that is only true or false. There can be no other option. Thus, if ```(x > y)``` is not true and the ```if``` block of code doesn't run, the only other option can false, which is when the ```else``` statement kicks in. Because of that, no logical statement is needed after ```else``` - if R gets to that keyword before executing any other block, it knows to execute this one. \n",
+    "If statements require a logical statement that is only true or false. There can be no other option. Thus, if ```(x > y)``` is not true and the ```if``` block of code doesn't run, the only other option can false, which is when the ```else``` statement kicks in. Because of that, no logical statement is needed after ```else``` - if R gets to that keyword before executing any other block, it knows to execute this one. \n",
     "\n",
-    "But what about when you have more than two options you want R to be able to do? I.e., maybe you want to print both x and y if they equal each other? You can extend this basic ```if/else``` construct to perform multiple logical checks in a row by adding one or more ```else if``` statements between the opening ```if``` and the closing ```else```. Each ```else if``` statement performs another logical check and executes its code ```if``` the check is true."
+    "But what about when you have more than two options you want R to be able to do? I.e., maybe you want to print both x and y if they equal each other? You can extend this basic if/else construct to perform multiple logical checks in a row by adding one or more ```else if``` statements between the opening ```if``` and the closing ```else```. Each ```else if``` statement performs another logical check and executes its code if the check is true."
    ]
   },
   {
@@ -237,8 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x <- 25\n",
-    "y <- 10\n",
+    "x <- 10\n",
+    "y <- 25\n",
     "\n",
     "if (x > y) {                     \n",
     "    print(x)\n",
@@ -267,7 +268,7 @@
    "metadata": {},
    "source": [
     "### For loops\n",
-    "```for``` loops are a programming construct that let you go through each item in a sequence of many items, and then perform some operation on each one. For instance, you could use a for loop to go through all the values in a set of numbers and check whether each conforms to some logical expression, or to print each value to the console."
+    "For loops are a programming construct that let you go through each item in a sequence of many items, and then perform some operation on each one. For instance, you could use a for loop to go through all the values in a set of numbers and check whether each conforms to some logical expression, or to print each value to the console."
    ]
   },
   {
@@ -315,7 +316,7 @@
    "id": "2f6fa5a4",
    "metadata": {},
    "source": [
-    "```for``` loops support a couple of keywords that help control the flow within the loop: ```next``` and ```break```.\n",
+    "For loops support a couple of keywords that help control the flow within the loop: ```next``` and ```break```.\n",
     "\n",
     "The ```next``` keyword causes a for loop to skip to the next iteration of the loop, and ignore any part of the loop block below it. For example, to print only every item greater than 5 in a different way:"
    ]
@@ -363,7 +364,7 @@
    "id": "0204cc1d",
    "metadata": {},
    "source": [
-    "In the ```for``` loop above, substituting the ```next``` keyword for ```break``` would actually result in the exact same output but the code would take longer to run because it would still go through each item (each new interation of the \"loop\") instead of breaking out of the ```for``` loop early. It is best to break out of loops early if possible to reduce how long it takes your code to run, especially when you have much longer code files than we're working with here."
+    "In the for loop above, substituting the ```next``` keyword for ```break``` would actually result in the exact same output but the code would take longer to run because it would still go through each item (each new interation of the \"loop\") instead of breaking out of the for loop early. It is best to break out of loops early if possible to reduce how long it takes your code to run, especially when you have much longer code files than we're working with here."
    ]
   },
   {
@@ -372,7 +373,7 @@
    "metadata": {},
    "source": [
     "### While loops\n",
-    "```while``` loops are similar to ```for``` loops in that they allow you to execute code over and over again. ```for``` loops execute their contents, at most, a number of iterations equal to the length of the sequence you are looping over. ```while loops```, on the other hand, keep executing their contents as long as a certain logical expression you supply remains true."
+    "While loops are similar to for loops in that they allow you to execute code over and over again. For loops execute their contents, at most, a number of iterations equal to the length of the sequence you are looping over. While loops, on the other hand, keep executing their contents as long as a certain logical expression you supply remains true."
    ]
   },
   {
@@ -403,9 +404,9 @@
     "\n",
     "Remember that a loop will only loop over code that is contained within the \"{}\" brackets of the code block!\n",
     "\n",
-    "```while``` loops can get you into trouble because they keep executing until the logical statement provided is false. If you supply a logical statement that will never become false and don't provide a way to break out of the ```while``` loop, it will run forever. For instance, if the ```while``` loop above didn't include the command to increment the value of ```hour``` by 1, the logical statement would never become false and the code would run forever. You'd never stop studying! Infinite while loops are a common cause of program hangs and crashes.\n",
+    "While loops can get you into trouble because they keep executing until the logical statement provided is false. If you supply a logical statement that will never become false and don't provide a way to break out of the while loop, it will run forever. For instance, if the while loop above didn't include the command to increment the value of ```hour``` by 1, the logical statement would never become false and the code would run forever. You'd never stop studying! Infinite while loops are a common cause of program hangs and crashes.\n",
     "\n",
-    "The ```next``` and ```break``` statements work inside ```while``` loops just like they do in ```for``` loops. You can use the ```break``` statement to escape a ```while``` loop even if the logical expression you supplied is true. Consider the following while loop:"
+    "The ```next``` and ```break``` statements work inside while loops just like they do in for loops. You can use the ```break``` statement to escape a while loop even if the logical expression you supplied is true. Consider the following while loop:"
    ]
   },
   {
@@ -418,7 +419,7 @@
     "end_time <- 5\n",
     "hour <- 1                 \n",
     "\n",
-    "while (hour < x) {            # This logical expression is always true!\n",
+    "while (hour < end_time) {            # This logical expression is always true!\n",
     "    print(\"Studying...\")\n",
     "    hour <- hour - 1    # We made a bug here - subtracting 1 means hour will never increase above end_time\n",
     "    print(hour)\n",
@@ -431,14 +432,14 @@
    "id": "72f8a8c3",
    "metadata": {},
    "source": [
-    "Without the ```break``` statement above, the ```while``` loop would have run forever. It is important to make sure that ```while``` loops contain a logical expression that will eventually be false or a ```break``` statement that will eventually be executed to avoid infinite loops.\n",
+    "Without the ```break``` statement above, the while loop would have run forever. It is important to make sure that while loops contain a logical expression that will eventually be false or a ```break``` statement that will eventually be executed to avoid infinite loops.\n",
     "\n",
-    "Although you can use a ```while``` loop to do anything a ```for``` loop can do, it is best to use ```for``` loops whenever you want to perform an operation a specific number of times. ```while``` loops should be reserved for cases where you don't know how many times you need to execute the loop. "
+    "Although you can use a while loop to do anything a for loop can do, it is best to use for loops whenever you want to perform an operation a specific number of times. While loops should be reserved for cases where you don't know how many times you need to execute the loop. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "da1ba199",
+   "id": "85396293",
    "metadata": {},
    "source": [
     "## 2.6 Writing your own functions\n",
@@ -451,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "489bcc0f",
+   "id": "617990d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,12 +470,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89719ee8",
+   "id": "5320e7f8",
    "metadata": {},
    "source": [
-    "We define a new function, ```fahrenheit_to_celsius```, by assigning it to the output of function that makes functions (helpfully, called ```function()```. The list of arguments to the function-making function are the arguments you would pass to your own function when using it. Next, the body of the function – the statements that are executed when it runs – is contained within curly braces ```{}```. The statements in the body are indented by two spaces, which makes the code easier to read. Lastly, the final line of the function body has the function ```return()```, which tells R what value should be returned by your function. \n",
+    "We define a new function, ```fahrenheit_to_celsius```, by assigning it to the output of a function that makes functions (helpfully, called ```function()```). The list of arguments to the function-making function are the arguments you would pass to your own function when using it. Next, the body of the function – the statements that are executed when it runs – is contained within curly braces ```{}```. The statements in the body are indented by two spaces, which makes the code easier to read. Lastly, the final line of the function body has the function ```return()```, which tells R what value should be returned by your function. \n",
     "\n",
-    "When we call the function, the values we pass to it are assigned to those variables so that we can use them inside the function. They are not defined outside the function block, and thus don't exist outside the function block - this is known as **variable scope**. \n",
+    "When we call the function, the values we pass to it are assigned to objects so that we can use them inside the function. Those objects are not defined *outside* the function block, and thus don't exist outside the function block - this is known as **variable scope**. \n",
     "\n",
     "Try defining your own function to convert Celsius temperatures the other way into Fahrenheit:"
    ]
@@ -482,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e60fd841",
+   "id": "5ccd9614",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec3de9b",
+   "id": "e8b6e89f",
    "metadata": {},
    "source": [
     "When doing basic statistics and data analysis, we don't often need to define our own functions because the things we're trying to do are common enough that other people have written those functions already, and we can simply download and import them. However, this is a good skill to know for whenever you start doing unique analyses that are cutting edge. In addition, even in the case where you use typical data analysis steps, if you find yourself repeating the same steps over and over you can write functions that will execute *sets of other functions*, which will save you a lot of time when writing code. "
