--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## 3.1 Representing data in R\n",
     "\n",
-    "We’ve used R objects so far to store a single number or message. But in statistics we are dealing more than one — and sometimes many — numbers. An R object can also store a whole set of numbers. This set together is called a **vector**. You can think of a vector as a list of numbers (or values).\n",
+    "We’ve used R objects so far to store a single number or message. But in statistics we are dealing with more than one — and sometimes many — numbers. An R object can also store a whole set of numbers. This set together is called a **vector**. You can think of a vector as a list of numbers (or values).\n",
     "\n",
     "The R function ```c()``` can be used to combine a list of individual values into a vector. You could think of the “c” as standing for “combine.” In the following code we have created two vectors (we just named them ```my_vector``` and ```my_vector2```) and put a list of values into each vector."
    ]
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8be2432c",
+   "id": "83e5dc41",
    "metadata": {},
    "source": [
     "Many functions will take in a vector as the input. For example, try using ```max()``` to find the largest number in ```my_vector```."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10978916",
+   "id": "f3d3c184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ca7624e",
+   "id": "fa9a7aed",
    "metadata": {},
    "source": [
     "We're not limited to indexing only one position at a time, either. We can also pass a vector of *index positions* inside the brackets to return only those positions:"
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe85e0bf",
+   "id": "aed3dd4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "759aeb04",
+   "id": "ae397361",
    "metadata": {},
    "source": [
     "And if we want to return a whole chunk of the vector (say, the 1st through the 4th position), we don't have to type out ```c(1,2,3,4)``` within the brackets. The ```:``` operator works like the word \"through\", such that the code ```1:4``` means \"every value from the 1st to the 4th, inclusive\"."
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f798ccb8",
+   "id": "f0aaa207",
    "metadata": {
     "scrolled": true
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "349b86f3",
+   "id": "995fbbd8",
    "metadata": {},
    "source": [
     "Finally, what if we want to return every item in a vector *except* a particular one? Then we get to use what's called **negative indexing**! Simply put a negative sign in front of an index position, and that will *remove* the item at that position from the output. "
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8795bb16",
+   "id": "af5719e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d9df057",
+   "id": "3405a14e",
    "metadata": {},
    "source": [
     "```for``` loops become very useful when we want to **iterate** through a vector (do something with each vector item). For instance, last chapter we created a vector of numbers, and then printed each item:"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "10c5c7cc",
+   "id": "933e6b43",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "021fe819",
+   "id": "b845d4da",
    "metadata": {},
    "source": [
     "When the command in the set of parentheses looks like ```(X in SOME_VECTOR)```, this is saying that the loop will take each *value* of each item for that iteration of the loop. However, you can also lean on the function ```length()``` to go through each *position* of each item: "
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "de4e182d",
+   "id": "ce82acfd",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27512737",
+   "id": "ad597fd8",
    "metadata": {},
    "source": [
     "Instead of the object ```position``` taking on the value of each item in ```my_sequence```, it is now taking a numeric value in the sequence 1 through the length of ```my_sequence```. "
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11015d23",
+   "id": "1a04b329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e072231",
+   "id": "4a3abc9f",
    "metadata": {},
    "source": [
     "We can also create Boolean vectors by subjecting a whole vector to a logical statement. Since a logical statement is an operation, R will apply it to every item in the handedness vector."
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa27bbe2",
+   "id": "504b6e2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0e06d9f",
+   "id": "482ecb8e",
    "metadata": {},
    "outputs": [],
    "source": [
